--- a/cidade-pt.html
+++ b/cidade-pt.html
@@ -20,7 +20,7 @@
 				<li><a href="cidade-pt.html">Cidade</a></li><h4>|</h4>
 				<li><a href="liturgia-pt.html">Liturgia</a></li><h4>|</h4>
 				<li><a href="contato-pt.html">Contato</a></li>	<h4>|</h4>
-				<li><form><input type="text" placeholder="Pesquisar..."></input> </form> </li>
+				<li><form><input type="text" placeholder="Pesquisar..." class="search"></input> </form> </li>
 				<li><a href="#"><i class="fa fa-search" aria-hidden="true" style="color: rgb(123,104,238)"></i></a></li>		
 			</ul>	
 			<ul style="font-family: 'Roboto', serif">
