--- a/galeria-it.html
+++ b/galeria-it.html
@@ -20,7 +20,7 @@
 				<li><a href="cidade-it.html">Città</a></li><h4>|</h4>
 				<li><a href="liturgia-it.html">Liturgia</a></li><h4>|</h4>
 				<li><a href="contato-it.html">Contatto</a></li>	<h4>|</h4>
-				<li><form><input type="text" placeholder="Ricerca..."></input> </form> </li>
+				<li><form><input type="text" placeholder="Ricerca..." class="search"></input> </form> </li>
 				<li><a href="#"><i class="fa fa-search" aria-hidden="true" style="color: rgb(123,104,238)"></i></a></li>		
 			</ul>		
 			<ul style="font-family: 'Roboto', serif">
