--- a/liturgia-en.html
+++ b/liturgia-en.html
@@ -20,7 +20,7 @@
 				<li><a href="cidade-en.html">City</a></li><h4>|</h4>
 				<li><a href="liturgia-en.html">Liturgy</a></li><h4>|</h4>
 				<li><a href="contato-en.html">Contact</a></li>	<h4>|</h4>
-				<li><form><input type="text" placeholder="Search..."></input> </form> </li>
+				<li><form><input type="text" placeholder="Search..." class="search"></input> </form> </li>
 				<li><a href="#"><i class="fa fa-search" aria-hidden="true" style="color: rgb(123,104,238)"></i></a></li>		
 			</ul>
 			<ul style="font-family: 'Roboto', serif">
