--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
 		<link href="fonts/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="icon" href="img/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body> 
 		<header>			
