--- a/index-en.html
+++ b/index-en.html
@@ -39,8 +39,9 @@
 						<li><a href="galeria-en.html" class="lista-paises">EN</a></li>
 					</ul>-->
 				</h1>
-				<h2 class="text">Website dedicated to Beata Chiara Luce Badano.
-				</h2>		
+				<h2 class="text">Website dedicated to Beata Chiara Luce Badano.</h2>
+				<h4 style="color: #555555"> Blessed Chiara Badano was a young Italian teenager who is currently in the process of being pronounced a saint by the Roman Catholic Church. When she was 16 she was diagnosed with osteogenic sarcoma, a painful bone cancer. Chiara succumbed to the cancer on October 7, 1990 after a two-year battle with the disease. Her feast day is celebrated on October 29.</h4>
+		
 			</div>
 			<div class="sec-home">
 					<div class="aba-esquerda">
