--- a/index-it.html
+++ b/index-it.html
@@ -39,8 +39,8 @@
 						<li><a href="galeria-en.html" class="lista-paises">EN</a></li>
 					</ul>-->
 				</h1>
-				<h2 class="text">Sito dedicato alla Beata Chiara Luce Badano.
-				</h2>		
+				<h2 class="text">Sito dedicato alla Beata Chiara Luce Badano.</h2>
+				<h4 style="color: #555555">La beata Chiara Badano era un giovane adolescente italiano che è attualmente in procinto di essere dichiarato santo dalla Chiesa cattolica romana. Quando aveva 16 anni è stata diagnosticata una sarcoma osteogenica, un dolore del cancro osseo. Chiara cedette al cancro il 7 ottobre 1990 dopo una battaglia biennale con la malattia. La sua festa è celebrata il 29 ottobre.</h4>		
 			</div>
 			<div class="sec-home">
 					<div class="aba-esquerda">
