--- a/index.html
+++ b/index.html
@@ -32,15 +32,9 @@
 		</nav>
 		<section class="sec-galeria" style="display: flex; flex-direction: column;">			
 			<div class="text">
-				<h1  style="display: flex; flex-direction: row; padding-top: 5px;">PÁGINA PRINCIPAL
-					<!--<ul style="margin: 0; margin-left: 10px;">
-						<li><a href="galeria-it.html" class="lista-paises">IT</a></li>
-						<li><a href="galeria-pt.html" class="lista-paises">PT</a></li>
-						<li><a href="galeria-en.html" class="lista-paises">EN</a></li>
-					</ul>-->
-				</h1>
-				<h2 class="text">Site dedicado à Beata Chiara Luce Badano.
-				</h2>		
+				<h1  style="display: flex; flex-direction: row; padding-top: 5px;">PÁGINA PRINCIPAL</h1>
+				<h2 class="text">Site dedicado à Beata Chiara Luce Badano.</h2>
+				<h4 style="color: #555555">A beata Chiara Badano era uma jovem adolescente italiana. Quando tinha 16 anos, foi diagnosticada com sarcoma osteogênico, um câncer de osso doloroso. Chiara sucumbiu ao câncer em 7 de outubro de 1990 após uma batalha de dois anos com a doença. Seu dia da festa é comemorado em 29 de outubro.</h4>
 			</div>
 			<div class="sec-home">
 					<div class="aba-esquerda">
@@ -137,6 +131,7 @@
 		<footer>
 			<h5>TODOS OS DIREITOS RESERVADOS &copy;</h5>
 		</footer>
+		<div id="fb-root"></div>
 	</body>
 
 </html>
