--- a/ls/index.html
+++ b/ls/index.html
@@ -5,7 +5,10 @@
         <title>SIMULADO - LS</title>
     </head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <body>
         <h1>Github Compare</h1>
